[workspace]
members = ["common" , "rmaps", "platform/*", "libs/*"]

[profile.dev]
codegen-units = 4
lto=false

[profile.release]
debug-assertions =true
debug = true


[replace]
"glium:0.22.0" = { git  = "https://github.com/semtexzv/glium", branch = "tmp-working"  }
"winit:0.16.2" = { git  = "https://github.com/semtexzv/winit"  }
"actix:0.5.8" = { path = "./libs/actix" }