[workspace]
members = ["common" , "rmaps", "platform/*", "libs/*"]

[profile.dev]
codegen-units = 4
lto=false
panic = "abort"

[profile.release]
debug-assertions =true
debug = true
opt-level = 3
#codegen-units = 1
# Panic =unwind not working on wasm32
panic = "abort"

[replace]
"actix:0.7.4" = { path = "./libs/actix" }
"image:0.20.0" = { path = "./libs/image" }