[package]
name = "common"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[[bin]]
name = "test-main"
path = "src/test_main.rs"

[features]
default = []

web = ["actix/runtime-web", "stdweb" ]
desktop = ["actix/runtime-tokio", "glium/glutin"]

[dependencies]

stdweb = { path = "../libs/stdweb", optional = true }
mvt = { path = "../libs/mvt" }

http = "*"
bytes = "*"
backtrace = "*"
image = "*"

glium = { path = "../libs/glium" }
glium_derive = { git  = "https://github.com/semtexzv/glium_derive" }
arraydeque = "0.4.2"
num = "*"
rayon = "*"

rand ="*"

log = "*"
fern = { version = "*", features = ["colored"] }
time = "*"
chrono = "*"
regex = "*"

cgmath = { version ="*", features = ["swizzle"] }
failure = "*"


scoped-tls = { version = "*", features = ["nightly"] }
serde= { version = "*", features = ["rc"] }
serde_derive="*"
serde_json="*"


futures = "0.1"
tokio-timer ="*"


url = "*"
uuid = { version = "*" , features = ["v4"]}

derive_more = "*"
css-color-parser = "*"
palette= "*"
lerp = "*"


actix = { path = "../libs/actix", default-features = false}


geometry = { path = "../libs/geometry" }
tess2 =  { path = "../libs/tess2" }
