[package]
name = "rmaps"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[profile.dev]
codegen-units=8
opt-level=0
incremental=true

[dependencies]
common = { path = "../common" }
geometry = { path = "../libs/geometry"}
mvt = { path = "../libs/mvt" }
rmaps_derive = { path = "../libs/rmaps_derive"}

serde= { version = "*", features = ["rc"] }
image = "*"

tess2 =  { path = "../libs/tess2" }
earcut = { path = "../libs/earcut" }

#imgui = { git = "https://github.com/semtexzv/imgui-rs" }
#imgui-glium-renderer = { git = "https://github.com/semtexzv/imgui-rs" }

imgui = { path = "../../imgui-rs" }
imgui-glium-renderer = { path = "../../imgui-rs/imgui-glium-renderer" }
