[package]
name = "rmaps"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[profile.dev]
codegen-units=8
opt-level=0
incremental=true


[features]
default = []
web = ["common/web"]
desktop = ["common/desktop"]

[dependencies]
common = { path = "../common", default-features = false }
rmaps_derive = { path = "../libs/rmaps_derive"}
serde= { version = "*", features = ["rc"] }


lazy_static = "*"

#imgui = { git = "https://github.com/semtexzv/imgui-rs" }
#imgui-glium-renderer = { git = "https://github.com/semtexzv/imgui-rs" }

#imgui =  { git = "https://github.com/semtexzv/imgui-rs", branch = "experimental" }
#imgui-glium-renderer = { git = "https://github.com/semtexzv/imgui-rs", branch = "experimental" }
