[package]
name = "android"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[lib]
name="rmaps_android"
crate-type = ["dylib"]

[dependencies]
common = { path = "../../common" }
rmaps = { path = "../../rmaps" }

[target.arm-linux-androideabi.dependencies]
android_injected_glue = "0.2.3"

[target.aarch64-linux-androide.dependencies]
android_injected_glue = "0.2.3"
