[package]
name = "web"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]

[dependencies]
rt_wasm = { path = "../../libs/actix/runtimes/rt_wasm"}
futures = "0.1"


common  = { path = "../../common", default-features = false, features = ["web"]}
rmaps = { path = "../../rmaps" , features = ["web"]}
